2003-12-31  MenTaLguY <mental@rydia.net>

	* configure.in, src/desktop.cpp, src/main.cpp: removed gtkmm
	  dependency for now

2003-12-30  bulia byak <bulia@dr.com>

	* src/selection-chemistry.cpp: Grouping: Statusbar messages for nothing to group or
	only one object, prevent crash when trying to group objects with different parents,
	add new group to the members' common parent rather than to the document
	root. Ungrouping: ungroup all groups in selection, statusbar messages for nothing to
	ungroup.

	* src/node-context.cpp src/node-context.h src/knotholder.h src/knotholder.cpp
	src/nodepath.h src/nodepath.cpp src/document-undo.cpp: Add repr listener in node
	context recreating nodepath or knotholder when the repr was changed outside of the
	node editor, remove the change selection signal hack in document_undo, fixes many
	bugs.

2003-12-28  Daniel Borgmann  <spark@mayl.de>

	* src/main.cpp: Include gtkmm/main.h and gtkmmify the main loop
	
	* src/desktop.cpp: convert save confirmation dialog to Gtkmm

2003-12-28  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/helper/Makefile.am: Try not to require Gnu make.

2003-12-27  Alexander Clausen <alex@skip86.com>
	
	* src/interface.{h,cpp} (sp_ui_error_dialog): new function.

	* src/file.cpp src/main.cpp src/dialogs/export.cpp src/interface.cpp: use it

2003-12-27  bulia byak <bulia@dr.com>

	* src/draw-context.cpp: Added drag_tolerance to bezier tool, messages to statusbar 

	* src/knot.cpp: Do not consume Esc when not escaping knot dragging 

	* src/select-context.cpp: Enable dragging objects selected within group

2003-12-27  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/helper/bezier-utils.cpp: Simplifications & documentation.

2003-12-26  bulia byak <bulia@dr.com>

	* src/document.cpp: added rel2abs to sp_document_set_uri, simplified

	* src/document.cpp: removed rel2abs into dir-util

	* src/dir-util.cpp src/dir-util.h: moved rel2abs and abs2rel here
